HIE to filter obs and encounters using global property