@@ -40,8 +40,8 @@ public class ShrConsent {
     }
 
     public String getScope(){
-        if(consent.hasScope()){
-            return consent.getScope().getCoding().getFirst().getDisplay();
+        if(consent.hasScope() && consent.getScope().hasCoding()){
+            return consent.getScope().getCoding().get(0).getDisplay();
         }
         return null;
     }
